tests/ui/closures/deduce-signature/obligation-with-leaking-placeholders.current.stderr
error: higher-ranked subtype error
  --> $DIR/obligation-with-leaking-placeholders.rs:18:5
   |
LL | /     needs_foo(|x| {
LL | |
LL | |
LL | |         x.to_string();
LL | |     });
   | |______^

error: aborting due to 1 previous error

